[project]
name = "datasettools"
version = "0.1.0"
description = "CLI tools for parsing CoNLL-U files and creating Hugging Face datasets"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}

dependencies = [
    "datasets>=3.5.0",
    "numpy>=1.24.0"
]

[project.scripts]
datasettools = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
